--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run build
         
       - name: Run Playwright tests
-        run: npm test
+        run: npm run test
         
       - name: Upload test results
         uses: actions/upload-artifact@v4
