--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
-    "update-baselines": "testivai compare --update-baselines",
-    "compare": "testivai compare"
+    "update-baselines": "npx testivai compare --update-baselines",
+    "compare": "npx testivai compare"
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "testivai-cli": "^1.0.13"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -32,7 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "playwright": "^1.53.1",
-    "testivai-visual-regression": "^1.0.9",
+    "testivai-visual-regression": "^1.0.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
