--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "@eslint/js": "^9.25.0",
     "@playwright/test": "^1.53.1",
     "@types/node": "^24.0.3",
@@ -29,6 +31,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "fs-extra": "^11.2.0",
     "globals": "^16.0.0",
     "playwright": "^1.53.1",
     "testivai-visual-regression": "^1.0.10",
