--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@actions/github": "^6.0.0",
     "@eslint/js": "^9.25.0",
     "@playwright/test": "^1.53.1",
+    "@testivai/witness-playwright": "^0.1.21",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -34,7 +35,6 @@
     "fs-extra": "^11.2.0",
     "globals": "^16.0.0",
     "playwright": "^1.53.1",
-    "testivai-visual-regression": "^1.0.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
